--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "pragmacss",
+  "name": "pragma-css",
   "version": "0.1.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AlexanderReiswich/pragma-css.git"
+  },
   "description": "A configurable CSS library built on stylus.",
   "author": "Alexander Reiswich <ali@mangadojo.com>",
-  "private": true,
+  "license": "MIT",
+  "main": "index.js",
   "dependencies": {}
 }
