--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pragma-css",
-  "version": "0.7.61",
+  "version": "0.7.62",
   "repository": {
     "type": "git",
     "url": "https://github.com/AlexanderReiswich/pragma-css.git"
@@ -12,8 +12,8 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "vuepress": "^1.0.0-beta.2",
-    "@vuepress/plugin-back-to-top": "^1.0.0-beta.2"
+    "@vuepress/plugin-back-to-top": "^1.0.2",
+    "vuepress": "^1.0.2"
   },
   "scripts": {
     "docs:dev": "vuepress dev docs",
